[package]
name = "example_blink"
version = "0.1.0"
edition = "2021"
description = "XIAO RP2040 RGB LED Blinking"
authors = ["Ryoga-exe <mail@ryoga.dev>"]

[[bin]]
name = "example_blink"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
seeeduino-xiao-rp2040 = "0.6.0"
smart-leds = "0.4.0"
ws2812-pio = "0.8.0"
