[package]
name = "example_piezo-elem-drive"
version = "0.1.0"
edition = "2021"
description = "XIAO RP2040, example of driving the piezo element"
authors = ["Ryoga-exe <mail@ryoga.dev>"]

[[bin]]
name = "example_piezo-elem-drive"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
seeeduino-xiao-rp2040 = "0.6.0"
